# minishell

./: .gitignore  .~lock.Minishell Tests.csv#  .~lock.Minishell Tests.ods#  .~lock.Minishell Tests.xls#  .~lock.Minishell Tests.xlsx#  .~lock.Minishell Tests1.xlsx#  1  3  CMakeLists.txt  Makefile  Minishell Tests.csv  Minishell Tests.ods  Minishell Tests.ods.cpgz  Minishell Tests.xls  README.md  a.out  add_redirect.c  count_argv.c  dollar_aizhan.c  file  file1  ft_list.c  ft_list2.c  main.c  minishell  minishell.h  my_bash  parser.c  parser3.c  parser4.c  parser5.c  redirect4.c  sandbox1.c  sandbox2.c  sandbox3.c  sandbox4.c  todos.txt  todos_checklist.txt  utils.c  utils2.c  (+2 more)
a.out.dSYM/Contents/Resources/DWARF/: a.out
kirill/: .gitignore  .heredoc  .~lock.Minishell Tests.xlsx#  1  8  CMakeLists.txt  Makefile  Minishell Tests.xlsx  Minishell Tests1.xlsx  abc3  add_redirect.c  cd.c  clear_arr.c  dollar_aizhan.c  ex.c  f  file  file1  file2  file3  fork_sandbox.c  ft_list.c  main.c  minishell  minishell.h  my_bash  my_file  my_fork.c  myfile1  parser.c  parser3.c  parser4.c  pipex.c  redirect4.c  test.c  todos.txt  utils.c  utils4.c
kirill/libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_tolower.c  libft.h
kirill/minishell.dSYM/Contents/Resources/DWARF/: minishell
kirill/srcs/: another_exit.c  executor.c  executor_utils_two.c  minishell.h  my_cd.c  my_echo.c  my_env.c  my_exit.c  my_export.c  my_fork.c  my_heredoc.c  my_pwd.c  my_unset.c  utils.c  utils_export.c  utils_part_three.c  utils_part_two.c
kirill/srcs/libft/: Makefile  ft_calloc.c  ft_isalpha.c  ft_itoa_base.c  ft_itoa_u.c  ft_itoa_uhex.c  ft_memchr.c  ft_memcmp.c  ft_putnbr_fd.c  ft_split.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c
libft/: Makefile  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstiter.c  ft_lstlast.c  ft_memcmp.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_strdup.c  ft_substr.c  ft_toupper.c
minishell.dSYM/Contents/Resources/DWARF/: minishell
my_bash.dSYM/Contents/: Info.plist
my_bash.dSYM/Contents/Resources/DWARF/: my_bash
srcs/: Makefile  builtins.c  executor.c  executor_utils.c  executor_utils_two.c  handle_error.c  main.c  minishell  minishell.h  my_cd.c  my_echo.c  my_env.c  my_exit.c  my_export.c  my_fork.c  my_heredoc.c  my_pwd.c  my_unset.c  utils.c  utils_export.c  utils_part_three.c  utils_part_two.c
srcs/libft/: CMakeLists.txt  ft_atoi.c  ft_bzero.c  ft_free_mem.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstnew.c  ft_memccpy.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  libft.h
